--- a/108.html
+++ b/108.html
@@ -135,9 +135,9 @@
     </style>
 </head>
 <body>
-<script src="js/jquery-2.1.3.min.js"></script>
-<script src="js/three.min.js"></script>
-<script src="js/tween.min.js"></script>
+<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/three.js/r67/three.min.js"></script>
+<script src="https://cdn.bootcss.com/tween.js/r7/Tween.min.js"></script>
 <script src="js/trackballcontrols.js"></script>
 <script src="js/css3drenderer.js"></script>
 
