--- a/108.html
+++ b/108.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>three.js css3d - periodic table</title>
     <style>
-        html, body {
+        html,body{
             height: 100%;
+            user-select:none;
         }
-
         body {
             background-color: #000000;
             margin: 0;
