--- a/108.html
+++ b/108.html
@@ -323,7 +323,7 @@
 </div>
 
 <div style="display:none;" class="fixSec8continue colorChange">待续!</div>
-<div  style="display: block" class="happiness ">
+<div   class="happiness ">
     <img src="qinBIgImage/-39.jpg" alt="">
     <div class="posi"></div>
 </div>
